execution_sample_out/bunny_hopscotch/016.txt
An error happened during execution:
  File "/tmp/tmpbfn6hjvb.py", line 50
    total_pairs = N * (2*S := 2*max(R,C)+1)**2  # placeholder
                       ^
SyntaxError: cannot use assignment expressions with operator
